--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,6 @@ services:
         deploy:
             placement:
                 constraints: [node.role == manager]
- 
     prometheus:
         image: quay.io/prometheus/prometheus:latest
         volumes:
@@ -57,6 +56,12 @@ services:
             - "5000:80"
         networks:
             - functions
+    result:
+        image: alexellis2/faas-vote-result
+        ports:
+            - "80:80"
+        networks:
+            - functions
 
     process_vote:
         labels:
@@ -71,13 +76,8 @@ services:
         image: postgres:9.5
         networks:
             - functions
-
-    # result:
-    #     build: ./result
-    #     volumes:
-    #     - ./result:/app
-    #     ports:
-    #     - "5001:80"
+        ports:
+            - "5432:5432"
 
 networks:
     functions:
